--- a/MonthlyStatement/Views/Shared/_Layout.cshtml
+++ b/MonthlyStatement/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                 <aside id="sidebar-wrapper">
                     <div class="sidebar-brand">
                         <a href="@Url.Action("Index", "Home", new { Area = "" })">
-                            <img alt="image" src="~/assets/img/vlu/logotrang.png" class="header-logo" /> <span class="logo-name" style="color:#fff">Monthly</span>
+                            <img alt="image" src="~/assets/img/vlu/logomoi.png" class="header-logo" /> <span class="logo-name" style="color:#fff">Monthly</span>
                         </a>
                     </div>
                     @if (User.IsInRole("Quản trị viên"))
