--- a/MonthlyStatement/Areas/Admin/Views/ListReportDepartment/Detail.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ListReportDepartment/Detail.cshtml
@@ -21,7 +21,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header bg-primary" style="height:100px">
-                        <h4 class="text-white" style="font-size:1.75rem">Báo cáo nhân viên</h4>
+                        <h4 class="text-white" style="font-size:1.75rem">Báo cáo bộ môn</h4>
                     </div>
                 </div>
                 <div class="col-12">
