--- a/MonthlyStatement/Areas/Department/Views/DepartmentReport/DepartmentDetail.cshtml
+++ b/MonthlyStatement/Areas/Department/Views/DepartmentReport/DepartmentDetail.cshtml
@@ -1,4 +1,4 @@
-﻿@model  MonthlyStatement.Models.FormDepartmentReport
+﻿﻿@model  MonthlyStatement.Models.FormDepartmentReport
 @using MonthlyStatement.Models
 @{
     ViewBag.Title = "DepartmentDetail";
@@ -22,7 +22,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header bg-primary" style="height:100px">
-                        <h4 class="text-white" style="font-size:1.75rem">Báo cáo nhân viên</h4>
+                        <h4 class="text-white" style="font-size:1.75rem">Báo cáo bộ môn</h4>
                     </div>
                 </div>
                 <div class="col-12">
