--- a/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model  MonthlyStatement.Models.FormPersonalReport
+﻿﻿@model  MonthlyStatement.Models.FormPersonalReport
 @using MonthlyStatement.Models
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -11,21 +11,18 @@
 
 @if (Session["faculty"] == null)
 {
-    <div class="#" role="alert">
+    <div class="" role="alert">
         Chưa có khoa. Vui lòng liên hệ thư ký để thêm khoa
-        <div>
-            <img src="~/assets/img/vlu/khoa.png" class="cangiua">
-        </div>
     </div>
+    
 }
 else if (ViewBag.CheckFormPer == true)
 {
     <div class="#" role="alert" style="font-size: 30px; color: black; text-align: center; font-weight: bold;padding:30px">
         CHƯA CÓ BIỂU MẪU CÓ THÁNG NÀY
-        <div>
-            <img src="~/assets/img/vlu/fomm.png" class="cangiua">
-        </div>
-
+    </div>
+    <div>
+        <img src="~/assets/img/vlu/fomm.png" class="cangiua">
     </div>
 }
 else if (ViewBag.CheckReportPer == true)
@@ -238,6 +235,11 @@ else
         </div>
     </section>
 }
+
+
+
+
+
 <script src="~/Scripts/jquery-3.4.1.js"></script>
 <script>
     //Thêm input
@@ -322,6 +324,7 @@ else
         }
     });
 </script>
+
 <style>
     img.cangiua {
         display: block;
